[package]
name = "buildinfo"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>"]
repository = "https://github.com/knsd/buildinfo"
documentation = "https://docs.rs/buildinfo"
readme = "../README.md"
categories = ["development-tools::build-utils"]

[dependencies]
rustc_version = "0.2.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.4", features = ["winbase", "minwindef", "winnt"]}